stderr
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! @ lint: `eslint --config ${CYBER_DOJO_SANDBOX}/.eslintrc.json /**/*.js`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the @ lint script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /home/sandbox/.npm/_logs/2022-08-26T08_59_40_203Z-debug.log
FAIL ./hiker.test.js
  â— Test suite failed to run

    SyntaxError: /sandbox/hiker.js: Unexpected token, expected "," (10:24)

       8 |   
       9 |   const resultArray = Array.from({length: 100}, (x, i) => i+1)
    > 10 |   .map(i=>(i % 3) === 0 "Fizz" : i)
         |                         ^
      11 |   .map(i=>(i % 5) === 0 "Buzz" : i)
      12 |   .map(i=>i);
      13 |

      at Parser._raise (../etc/jest/node_modules/@babel/parser/src/parser/error.js:60:45)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        1.58 s
Ran all test suites.
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! @ test: `jest --coverage`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the @ test script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /home/sandbox/.npm/_logs/2022-08-26T08_59_42_636Z-debug.log
